--- a/FCC-Project-2/src/assets/main.css
+++ b/FCC-Project-2/src/assets/main.css
@@ -1,6 +1,7 @@
 @import './base.css';
 
 #app {
+  display: flex;
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -28,8 +29,7 @@ a,
   }
 
   #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
     padding: 0 2rem;
   }
 }
