--- a/Front-End-Project-3/src/assets/main.css
+++ b/Front-End-Project-3/src/assets/main.css
@@ -1,5 +1,9 @@
 @import './base.css';
 
+body {
+  display: flex;
+}
+
 #app {
   max-width: 1280px;
   margin: 0 auto;
@@ -21,7 +25,7 @@ a,
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 0px) {
   body {
     display: flex;
   }
