--- a/FCC-Project-2/src/assets/main.css
+++ b/FCC-Project-2/src/assets/main.css
@@ -16,6 +16,15 @@ a,
   padding: 3px;
 }
 
+.controls button.btn {
+  width: 100%;
+  border: 2px solid red !important;
+}
+
+#testing {
+  color: red;
+}
+
 @media (hover: hover) {
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
