--- a/Front-End-Projects/fcc-frontend-projects-pomodoro/src/assets/main.css
+++ b/Front-End-Projects/fcc-frontend-projects-pomodoro/src/assets/main.css
@@ -29,3 +29,11 @@ a,
     background-color: hsla(160, 100%, 37%, 0.2);
   }
 }
+
+/* -------------------------------------------------------------------------- */
+/*                                   Utility                                  */
+/* -------------------------------------------------------------------------- */
+
+.text-color-mute {
+  color: var(--vt-c-white-soft);
+}
